<resources>
    <string name="app_name">速金派</string>
    <string name="loading">加载中</string>

    <!-- error -->
    <string name="error_please_check_network">请检查网络。</string>
    <string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
    <string name="error_not_found_server">未发现指定服务器，清切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_unknow">未知错误。</string>
    <string name="error_response_code">服务器响应码%1$d</string>
    <string name="error_response_code_dex">服务器响应码%1$d，如果你们服务器在这种情况下也返回数据你可以处理。</string>
    <string name="hint_login_phone_num">请输入手机号码</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="hint_login_error_tip">密码位数小于6位</string>
    <string name="hint_register_password">请设置您的密码</string>
    <string name="hint_invite_code">填写邀请码(填写邀请人手机号)</string>
    <string name="forget_password">忘记密码？</string>
    <string name="quick_register">还没有账号？手机快速注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_register_phone_num">请输入您的手机号</string>
    <string name="input_sms_code">请输入您的验证码</string>
    <string name="input_img_code">请输入图形的验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="immediately_register">立即注册</string>
    <string name="update_now">立即更新</string>
    <string name="request_succeed">请求成功</string>
    <string name="request_failed">请求失败</string>
    <string name="know">知道了</string>
    <string name="find_password">找回密码</string>
    <string name="next">下一步</string>
    <string name="input_new_password">请输入您的新密码</string>
    <string name="input_new_password_again">请再输入一次</string>
    <string name="set">设置</string>
    <string name="after_get_again">(%s)后重新获取"</string>
    <string name="get_again">重新获取</string>
    <string name="band_new_card">绑定新的信用卡</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_info">会员信息</string>
    <string name="invite_income">邀请收益</string>
    <string name="name">姓名</string>
    <string name="phone">手机号码</string>
    <string name="id_card">身份证号</string>
    <string name="authenticate">实名认证</string>
    <string name="band_card">绑卡</string>
    <string name="upload_photo">上传照片</string>
    <string name="chose_photo">选择相册</string>
    <string name="id_card_top">身份证正面</string>
    <string name="id_card_bottom">身份证背面</string>
    <string name="bank_card_top">银行卡正面</string>
    <string name="user_id_bank">手持身份证和银行卡</string>
    <string name="input_real_name">请输入姓名</string>
    <string name="input_id_card">请输入身份证号码</string>
    <string name="take_photo">拍照</string>
    <string name="cancel">取消</string>
    <string name="input_card_number">请输入银行卡号</string>
    <string name="input_debit_card_number">请输入储蓄卡卡号</string>
    <string name="select_bank_belong">请选择您的开户行</string>
    <string name="select_pay_card">请选择支付卡</string>
    <string name="transfer_recharge">转账充值</string>
    <string name="end_number">(尾号%s)</string>
    <string name="add_card">添加银行卡</string>
    <string name="band">绑定</string>
    <string name="in_the_area">所属地区</string>
    <string name="address">选择地址</string>
    <string name="single_quota">单笔限额</string>
    <string name="day_quota">单日限额</string>
    <string name="mouth_quota">每月限额</string>
    <string name="hint_pay_money">请输入您的收款金额</string>
    <string name="get_pay">收款</string>
    <string name="pay_list">交易记录</string>
    <string name="title_activity_my_secret">MySecretActivity</string>
    <string name="my_secret">安全中心</string>
    <string name="logout">退出登录</string>
    <string name="change_password">修改密码</string>
    <string name="input_password">请输入旧密码</string>
    <string name="my">我的</string>
    <string name="level">会员等级</string>
    <string name="bankcard">结算卡</string>
    <string name="about_us">关于我们</string>
    <string name="band_credit_card">绑定信用卡</string>
    <string name="hint_bank_date">卡有效期 月 年，例如0118</string>
    <string name="hint_bank_cvn">卡背后最后三位数字</string>
    <string name="activity">精选活动</string>
    <string name="credit_card_list">支付卡管理</string>
    <string name="sj_info">&#160;&#160;&#160;&#160;&#160;&#160;速金派是苏津科技联合知名支付公司推出的移动收款工具。用户可以通过信用卡付款，资金会快速到账指定的储蓄卡。速金派帮助您充分利用资金，创造更多财富。</string>
    <string name="wx_info">微信公众号：SJ派</string>
    <string name="wx_service">微信客服：SJpay-op</string>
    <string name="app_version">APP版本：</string>
    <string name="loan">精选网贷</string>
    <string name="get_card">极速办卡</string>
    <string name="card_raiders">办卡攻略</string>
    <string name="pay_raiders">收款攻略</string>
    <string name="my_fee">我的费率</string>
    <string name="fee_info">会员信息</string>
    <string name="image_code_error">图形验证码有误</string>
    <string name="sms_code_error">验证码有误</string>
    <string name="total_income">总收益(元)</string>
    <string name="last_month_income">上月收益(元)&#160;&#160;</string>
    <string name="this_month_income">当月收益(元)</string>
    <string name="invite">邀请好友</string>
    <string name="invite_short">邀请</string>
    <string name="invite_list">好友列表</string>
    <string name="my_count">我的账户</string>
    <string name="my_balance">可用余额(元)</string>
    <string name="withdraw">提现</string>
    <string name="get_vip">开通会员</string>
    <string name="wx_pay">微信扫码支付</string>
    <string name="vip_interests">会员尊享权益</string>
    <string name="contact_us">联系客服</string>
    <string name="user_guide">新手入门</string>
    <string name="get_svip">点击开通会员</string>
    <string name="get_proxy">成为顶级代理</string>
    <string name="invite_face_to_face">面对面邀请</string>
    <string name="contact">联系我们</string>
    <string name="quota">额度</string>
    <string name="money_list">资金记录</string>
    <string name="net_error">网络错误</string>

    <!-- Download status -->
    <string name="download_progress">已下载：%1$d&#037;&#037;，速度：%2$skb&#047;s</string>
    <string name="download_status_pause">暂停</string>
    <string name="download_status_be_pause">下载被暂停</string>
    <string name="download_status_re_download">重新下载</string>
    <string name="download_status_again_download">再次尝试</string>
    <string name="download_status_resume">继续下载</string>
    <string name="download_status_finish">下载完成！</string>
    <!-- Download error -->
    <string name="download_error">下载出错了：%1$s</string>
    <string name="download_error_server">服务器数据错误！</string>
    <string name="download_error_network">网络不可用，请检查网络！</string>
    <string name="download_error_storage">存储卡错误，请检查存储卡！</string>
    <string name="download_error_space">存储卡空间不足！</string>
    <string name="download_error_timeout">下载超时！</string>
    <string name="download_error_un_know_host">找不到服务器。</string>
    <string name="download_error_url">URL地址错误。</string>
    <string name="download_error_un">未知错误。</string>
    <string name="transaction_type">交易类型</string>
    <string name="normal_fee">普通费率</string>
    <string name="vip_fee">VIP费率</string>
    <string name="have_integral">有积分</string>
    <string name="normal_fee_num">0.50%+2元/笔</string>
    <string name="vip_fee_num">0.43%+2元/笔</string>
    <string name="no_integral">无积分</string>
    <string name="normal_no_integral_fee_num">0.47%+2元/笔</string>
    <string name="vip_no_integral_fee_num">0.39%+2元/笔</string>
    <string name="bank">银行</string>
    <string name="quick_agreement">开通快捷支付</string>
    <string name="open">开通</string>
    <string name="integral_aisle">有积分</string>
    <string name="no_integral_aisle">无积分</string>
    <string name="please_input_id_card">请您输入正确的身份证号</string>
    <string name="please_ouload_photo">请您先上传照片</string>
    <string name="rule_detail">详细规则&#160;&#160;</string>
    <string name="svip_forever">SVIP会员</string>
    <string name="vip_forever">VIP会员</string>
    <string name="vip_svip">VIP升级SVIP</string>
    <string name="confirm">确定</string>
    <string name="fee">费率</string>
</resources>
