<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_EFEFEF">

    <com.sujin.sjpay.view.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        app:bar_title="@string/find_password" />

    <com.sujin.sjpay.view.PasswordEditText
        android:id="@+id/et_new_password"
        style="@style/edit_password"
        android:layout_marginTop="30dp"
        android:hint="@string/input_new_password"/>

    <com.sujin.sjpay.view.PasswordEditText
        android:id="@+id/et_new_password_again"
        style="@style/edit_password"
        android:layout_marginTop="20dp"
        android:hint="@string/input_new_password_again"/>

    <TextView
        android:id="@+id/tv_confirm"
        android:text="@string/set"
        style="@style/bt_normal"
        />
</LinearLayout>