<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sujin.sjpay.fragment.MyFragment"
    android:orientation="vertical"
    android:background="@color/gray_EFEFEF">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/srl_my"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:background="@drawable/invite_income_bg">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginLeft="@dimen/_30dp"
                android:src="@drawable/user_icon"/>

        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tv_my_info"
                style="@style/tv_my"
                android:text="@string/my_info" />

            <View
                style="@style/view_1px_line_horizontal"
                android:layout_width="@dimen/margin"
                android:background="@color/white" />


            <TextView
                android:id="@+id/tv_invite"
                style="@style/tv_my"
                android:text="@string/invite" />

            <View
                style="@style/view_1px_line_horizontal"
                android:layout_width="@dimen/margin"
                android:background="@color/white" />


            <TextView
                android:id="@+id/tv_invite_income"
                style="@style/tv_my"
                android:text="@string/invite_income" />

            <View
                style="@style/view_1px_line_horizontal"
                android:layout_width="@dimen/margin"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_fee_info"
                style="@style/tv_my"
                android:text="@string/fee_info" />
            <View
                style="@style/view_1px_line_horizontal"
                android:layout_width="@dimen/margin"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_my_credit_card"
                style="@style/tv_my"
                android:text="@string/credit_card_list" />

            <View
                style="@style/view_1px_line_horizontal"
                android:layout_width="@dimen/margin"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_my_secret"
                style="@style/tv_my"
                android:layout_height="47dp"
                android:text="@string/change_password" />

            <View
                style="@style/view_1px_line_horizontal"
                android:layout_width="@dimen/margin"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_about_us"
                style="@style/tv_my"
                android:text="@string/about_us" />

            <View
                style="@style/view_1px_line_horizontal"
                android:layout_width="@dimen/margin"
                android:background="@color/white" />

        </LinearLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>
