<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.sujin.sjpay.activity.MyInfoActivity"
    android:background="@color/white_FFF0FAF8">

    <com.sujin.sjpay.view.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        app:bar_title="基本信息" />

    <LinearLayout
        style="@style/base_linear_mwv"
        android:background="@drawable/bg_coner_10_stroke_full_white"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_15dp">

        <RelativeLayout style="@style/rl_my">

            <TextView
                style="@style/tv_security"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/tv_security_right"/>

        </RelativeLayout>
        <View style="@style/view_1px_line_horizontal"
            android:layout_marginLeft="@dimen/_15dp"
            android:layout_marginRight="@dimen/_15dp"/>
        <RelativeLayout style="@style/rl_my">

            <TextView
                style="@style/tv_security"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/tv_phone"
                style="@style/tv_security_right"/>

        </RelativeLayout>
        <View style="@style/view_1px_line_horizontal"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"/>
        <RelativeLayout style="@style/rl_my"
            android:visibility="gone">

            <TextView
                style="@style/tv_security"
                android:text="@string/level" />

            <TextView
                android:id="@+id/tv_level"
                style="@style/tv_security_right"/>

        </RelativeLayout>
        <View style="@style/view_1px_line_horizontal"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"

            android:visibility="gone"/>
        <RelativeLayout style="@style/rl_my"
            android:visibility="gone">

            <TextView
                style="@style/tv_security"
                android:text="@string/my_fee" />

            <TextView
                android:id="@+id/tv_my_feel"
                style="@style/tv_security_right"/>

        </RelativeLayout>
        <View style="@style/view_1px_line_horizontal"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:visibility="gone"/>
        <RelativeLayout style="@style/rl_my">

            <TextView
                style="@style/tv_security"
                android:text="@string/id_card" />

            <TextView
                android:id="@+id/tv_id_card"
                style="@style/tv_security_right"/>

        </RelativeLayout>
        <View style="@style/view_1px_line_horizontal"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"/>
        <RelativeLayout style="@style/rl_my">

            <TextView
                style="@style/tv_security"
                android:text="@string/bankcard" />

            <TextView
                android:id="@+id/tv_bankcard"
                style="@style/tv_security_right"/>

        </RelativeLayout>
        <View style="@style/view_1px_line_horizontal"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"/>
        <RelativeLayout style="@style/rl_my">

            <TextView
                style="@style/tv_security"
                android:text="@string/bank" />

            <TextView
                android:id="@+id/tv_bankcard_belong"
                style="@style/tv_security_right"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
