<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray_EFEFEF">

    <com.sujin.sjpay.view.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        app:bar_title="@string/my_secret" />

    <TextView
        android:id="@+id/tv_my_info"
        style="@style/tv_my"
        android:text="@string/change_password" />

    <View
        style="@style/view_1px_line_horizontal"
        android:layout_width="@dimen/margin"
        android:background="@color/white" />

    <TextView
        android:id="@+id/tv_security_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/bg_orange_rect"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_40px" />

</LinearLayout>
