<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_EFEFEF"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.sujin.sjpay.view.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        app:bar_title="@string/change_password" />

    <com.sujin.sjpay.view.PasswordEditText
        android:layout_marginTop="@dimen/_20dp"
        android:id="@+id/et_old_password"
        style="@style/edit_password"
        android:hint="@string/input_password" />

    <com.sujin.sjpay.view.PasswordEditText
        android:layout_marginTop="@dimen/_20dp"
        android:id="@+id/et_new_password"
        style="@style/edit_password"
        android:hint="@string/input_new_password" />

    <com.sujin.sjpay.view.PasswordEditText
        android:layout_marginTop="@dimen/_20dp"
        android:id="@+id/et_new_password_again"
        style="@style/edit_password"
        android:hint="@string/input_new_password" />

    <TextView
        android:id="@+id/tv_next"
        style="@style/bt_normal"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/change_password" />

</LinearLayout>